<resources>
    <string name="app_name">FirstActivity</string>
    <string name="titolo">Titolo</string>
    <string name="sottotitolo">Sottotitolo</string>
    <string name="data">Data</string>
    <string name="leggi">Leggi</string>
    <string name="email">E-mail:</string>
    <string name="passw">Password:</string>
    <string name="login">Login</string>
    <string name="toast">Successful!</string>
    <string name="toast2">Complete all field</string>
    <string name="toast3">too long</string>
    <string name="nome">Emanuele</string>
    <string name="username">Nome:</string>
    <string name="cognome">Paciolla</string>
    <string name="date">12/05/97</string>
    <string name="corso">LTM</string>
    <string name="via">Sandro Sandri 71</string>
    <string name="Tel1">3245698765</string>
    <string name="Call">call</string>
    <string name="GO">go</string>
    <string name="share">share</string>
    <string name="info">info</string>
    <string name="student_name">Insert a student name</string>
    <string name="mail_hint">Insert your e-mail</string>
    <string name="phone">Insert your phone</string>
    <string name ="student">Studente</string>
    <string name="insert_student_name">Inserisci nuovo studente</string>
    <string name="text">Insert a text</string>
    <string name="done">Ok</string>
    <string name="cancel">annulla</string>
    <string name="ok">OK</string>
    <string name="ind_email">giacobbepaciollero@gmail.com</string>
    <string name="text2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac risus nisl. Curabitur blandit, libero non semper maximus, leo felis sollicitudin arcu, vitae varius eros sem a lacus. Aliquam at semper leo. Morbi facilisis diam libero. Integer vulputate augue nec orci viverra, viverra tincidunt mi finibus. Vestibulum commodo orci eu.</string>
    <string name="text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ac risus nisl. Curabitur blandit, libero non semper maximus, leo felis sollicitudin arcu, vitae varius eros sem a lacus. Aliquam at semper leo. Morbi facilisis diam libero. Integer vulputate augue nec orci viverra, viverra tincidunt mi finibus. Vestibulum commodo orci eu.</string>
</resources>
